<resources>
    <string name="app_name">SQLite Project</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="year_enrolled">Year Enrolled</string>
    <string name="current">Current?</string>
    <string name="id">ID</string>
    <string name="enrolled">Enrolled?</string>
    <string name="preferences_icon">Preferences Icon</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="on_off">On/Off</string>
    <string name="save">Save</string>
    <string name="back_to_list">Back to List</string>
    <string name="welcome">Welcome!</string>
    <string name="textview">TextView</string>
    <string name="active_student">Active Student?</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="yes_no">Yes/No</string>
    <string name="current_student">Current Student</string>
    <string name="current_studentquestion">Current Student?</string>
</resources>